--- a/login/media/css/login.css
+++ b/login/media/css/login.css
@@ -1,365 +1,95 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+.btn { 
+      display: inline-block; 
+     /**display: inline; 
+     *zoom: 1;*/ 
+     padding: 4px 10px 4px; 
+     margin-bottom: 0; 
+     font-size: 13px; 
+     line-height: 18px; 
+     color: #333333; 
+     text-align: center;
+     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); 
+     vertical-align: 
+     middle; 
+     background-color: #f5f5f5; 
+     background-image: 
+     -moz-linear-gradient(top, #ffffff, #e6e6e6); 
+     background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6); 
+     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+      background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6); 
+      background-image: -o-linear-gradient(top, #ffffff, #e6e6e6); 
+      background-image: linear-gradient(top, #ffffff, #e6e6e6); 
+      background-repeat: repeat-x; 
+      filter: progid:dximagetransform.microsoft.gradient(startColorstr=#ffffff, endColorstr=#e6e6e6, GradientType=0); 
+      border-color: #e6e6e6 #e6e6e6 #e6e6e6; 
+      border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+      border: 1px solid #e6e6e6; 
+      -webkit-border-radius: 4px; 
+      -moz-border-radius: 4px; 
+      border-radius: 4px; 
+      -webkit-box-shadow: 
+      inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); 
+      -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); 
+      box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); 
+      cursor: pointer; *margin-left: .3em; 
+    }
+.btn:hover, .btn:active, .btn.active, .btn.disabled, .btn[disabled] { background-color: #e6e6e6; }
+.btn-large { padding: 9px 14px; font-size: 20px; line-height: normal; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
+.btn:hover { color: #333333; text-decoration: none; background-color: #e6e6e6; background-position: 0 -15px; -webkit-transition: background-position 0.1s linear; -moz-transition: background-position 0.1s linear; -ms-transition: background-position 0.1s linear; -o-transition: background-position 0.1s linear; transition: background-position 0.1s linear; }
+.btn-primary, .btn-primary:hover { text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); color: #ffffff; }
+.btn-primary.active { color: rgba(255, 255, 255, 0.75); }
+.btn-primary { background-color: #4a77d4; background-image: -moz-linear-gradient(top, #6eb6de, #4a77d4); background-image: -ms-linear-gradient(top, #6eb6de, #4a77d4); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6eb6de), to(#4a77d4)); background-image: -webkit-linear-gradient(top, #6eb6de, #4a77d4); background-image: -o-linear-gradient(top, #6eb6de, #4a77d4); background-image: linear-gradient(top, #6eb6de, #4a77d4); background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#6eb6de, endColorstr=#4a77d4, GradientType=0);  border: 1px solid #3762bc; text-shadow: 1px 1px 1px rgba(0,0,0,0.4); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5); }
+.btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { filter: none; background-color: #4a77d4; }
+.btn-block { width: 100%; display:block; }
 
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
+* { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }
 
-*, :after, :before  {
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-weight: 300;
-}
+html { width: 100%; height:100%; overflow:hidden; }
 
-body {
-  font-family: 'Source Sans Pro', sans-serif;
-  color: white;
-  font-weight: 300;
-  background-color: #d4e6f5;
-}
-
-body ::-webkit-input-placeholder {
-  /* WebKit browsers */
-  font-family: 'Source Sans Pro', sans-serif;
-  color: white;
-  font-weight: 300;
-}
-
-body :-moz-placeholder {
-  /* Mozilla Firefox 4 to 18 */
-  font-family: 'Source Sans Pro', sans-serif;
-  color: white;
-  opacity: 1;
-  font-weight: 300;
-}
-body ::-moz-placeholder {
-  /* Mozilla Firefox 19+ */
-  font-family: 'Source Sans Pro', sans-serif;
-  color: white;
-  opacity: 1;
-  font-weight: 300;
-}
-
-body :-ms-input-placeholder {
-  /* Internet Explorer 10+ */
-  font-family: 'Source Sans Pro', sans-serif;
-  color: white;
-  font-weight: 300;
-}
-
-.wrapper {
-  background: #50a3a2;
-  background: -webkit-linear-gradient(top left, #993c5f 0%, #ad486f 100%);
-  background: linear-gradient(to bottom right, #993c5f 0%, #ad486f 100%);
-  position: absolute;
-
+body { 
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  height:100%;
+  font-family: 'Open Sans', sans-serif;
+  background: #092756;
+  background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),-moz-linear-gradient(top,  rgba(52, 125, 154, 0.25) 0%, rgba(81, 65, 133, 0.4) 100%), -moz-linear-gradient(135deg,  #422728 0%, #6365d2 100%);
+  background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -webkit-linear-gradient(top,  rgba(52, 125, 154, 0.25) 0%,rgba(81, 65, 133, 0.4) 100%), -webkit-linear-gradient(135deg,  #422728 0%,#6365d2 100%);
+  background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -o-linear-gradient(top,  rgba(52, 125, 154, 0.25) 0%,rgba(81, 65, 133, 0.4) 100%), -o-linear-gradient(135deg,  #422728 0%,#6365d2 100%);
+  background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), -ms-linear-gradient(top,  rgba(52, 125, 154, 0.25) 0%,rgba(81, 65, 133, 0.4) 100%), -ms-linear-gradient(135deg,  #422728 0%,#6365d2 100%);
+  background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%), linear-gradient(to bottom, rgba(52, 125, 154, 0.25) 0%,rgba(81, 65, 133, 0.4) 100%), linear-gradient(135deg, #422728 0%,#6365d2 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E1D6D', endColorstr='#092756',GradientType=1 );
 }
-
-.form-success {
-
-  -webkit-transform: translateY(110px);
-          transform: translateY(110px);
-}
-
-.alert-info{
-            background-color:#00b0e4 !important;
-}
-.alert-success{
-            background-color:#2b982b !important;
-}
-.alert-warning{
-            background-color:#ff9600 !important;
-}
-.alert-danger{
-            background-color:#fb483a !important;
-}
-
-
-.alert {
-    display: inline-block !important;
-    margin: auto !important;
-    position: absolute !important;
-    width: 320px !important;
-    transition: all 0.7s ease-in-out !important;
-    z-index: 9999 !important;
-    top: 15% !important;
-    padding: 10px !important;
-
-    border-radius:3px !important;
-    border:none !important;
-    color:#ffffff;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-    z-index:3002 !important;
-
-}
-
-.close {
-    position: absolute !important;
-    right: -10px !important;
-    top: -10px !important;
-    z-index: 10001 !important;
-    border-radius: 50% !important;
-    width: 20px !important;
-    color: #fff !important;
-    background-color: #818182 !important;
-    border: 0.85px solid #fff !important;
-    font-size: large !important;
-
-}
-
-[data-notify=message]{
-    display: grid;
-    text-align: center;
-    margin-top: 5px;
-}
-
-[data-notify=title]{
-    font-weight: 900 !important;
-    font-size: 20px !important;
-}
-
-.fa{
-
-  font-size: 1.4em !important;
-
-}
-
-
-.input-error{
-
-    border: 1px solid #E91E63;
-    -webkit-box-shadow: 0px 0px 2.5px 0px rgb(208, 50, 81);
-    -moz-box-shadow: 0px 0px 2.5px 0px rgb(208, 50, 81);
-         box-shadow: 0px 0px 2.5px 0px rgb(208, 50, 81);
-
-}
-
-.input-error::placeholder { color: red; }
-
-.container {
-
-   max-width: 600px;
-   margin: 10% auto;
-   padding: 80px 0;
-   height: 60%;
-
-}
-.container h1 {
-
-  display: block;
-  text-align: center;
-  font-size: 3.5em;
-  -webkit-transition-duration: 3s;
-  transition-duration: 3s;
-  -webkit-transition-timing-function: ease-in-put;
-  transition-timing-function: ease-in-put;
-  font-weight: 700;
-}
-
-form {
-
-    padding: 2em 0;
-    position: relative;
-    z-index: 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-}
-form input {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  outline: 0;
-  border: 1px solid rgba(255, 255, 255, 0.4);
-  background-color: rgba(255, 255, 255, 0.2);
-  width: 250px;
-  border-radius: 3px;
-  padding: 10px 15px;
-  margin: 0 auto 10px auto;
-  display: block;
-  text-align: center;
-  font-size: 25px;
-  color: white;
-  -webkit-transition-duration: 0.35s;
-          transition-duration: 0.35s;
-  font-weight: 300;
-}
-form input:hover {
-  background-color: rgba(255, 255, 255, 0.4);
-}
-form input:focus {
-  background-color: white;
-  width: 300px;
-  color: #993c5f;
-}
-form button {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  outline: 0;
-  background-color: white;
-  border: 0;
-  padding: 10px 15px;
-  color: #993c5f;
-  border-radius: 3px;
-  width: 250px;
-  cursor: pointer;
-  font-size: 23px;
-  -webkit-transition-duration: 0.25s;
-          transition-duration: 0.25s;
-}
-
-form button:hover {
-  background-color: #f5f7f9;
-}
-
-.bg-bubbles {
+.login { 
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+  top: 50%;
+  left: 50%;
+  margin: -150px 0 0 -150px;
+  width:300px;
+  height:300px;
+}
+.login h1 { 
+  color: #fff; 
+  text-shadow: 0 0 10px rgba(0,0,0,0.3); 
+  letter-spacing:1px; text-align:center; 
 }
 
-.bg-bubbles li {
-  position: absolute;
-  list-style: none;
-  display: block;
-  width: 40px;
-  height: 40px;
-  background-color: rgba(255, 255, 255, 0.15);
-  bottom: -160px;
-  -webkit-animation: square 30s infinite;
-  animation: square 30s infinite;
-  -webkit-transition-timing-function: linear;
-  transition-timing-function: linear;
+input { 
+  width: 100%; 
+  margin-bottom: 10px; 
+  background: rgba(0,0,0,0.3);
+  border: none;
+  outline: none;
+  padding: 10px;
+  font-size: 20px;
+  color: #fff;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+  border: 1px solid rgba(0,0,0,0.3);
+  border-radius: 4px;
+  box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
+  -webkit-transition: box-shadow .7s ease;
+  -moz-transition: box-shadow .7s ease;
+  -o-transition: box-shadow .7s ease;
+  -ms-transition: box-shadow .7s ease;
+  transition: box-shadow .7s ease;
 }
-
-.bg-bubbles li:nth-child(1) {
-  left: 10%;
-}
-
-.bg-bubbles li:nth-child(2) {
-  left: 20%;
-  width: 80px;
-  height: 80px;
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-  -webkit-animation-duration: 20s;
-          animation-duration: 20s;
-}
-
-.bg-bubbles li:nth-child(3) {
-  left: 25%;
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
-}
-
-.bg-bubbles li:nth-child(4) {
-  left: 40%;
-  width: 60px;
-  height: 60px;
-  -webkit-animation-duration: 22s;
-          animation-duration: 22s;
-  background-color: rgba(255, 255, 255, 0.25);
-}
-.bg-bubbles li:nth-child(5) {
-  left: 70%;
-}
-.bg-bubbles li:nth-child(6) {
-  left: 80%;
-  width: 120px;
-  height: 120px;
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-  background-color: rgba(255, 255, 255, 0.2);
-}
-.bg-bubbles li:nth-child(7) {
-  left: 32%;
-  width: 160px;
-  height: 160px;
-  -webkit-animation-delay: 5s;
-          animation-delay: 5s;
-}
-.bg-bubbles li:nth-child(8) {
-  left: 55%;
-  width: 20px;
-  height: 20px;
-  -webkit-animation-delay: 15s;
-          animation-delay: 15s;
-  -webkit-animation-duration: 35s;
-          animation-duration: 35s;
-}
-.bg-bubbles li:nth-child(9) {
-  left: 25%;
-  width: 10px;
-  height: 10px;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
-  -webkit-animation-duration: 40s;
-          animation-duration: 40s;
-  background-color: rgba(255, 255, 255, 0.3);
-}
-
-.bg-bubbles li:nth-child(10) {
-  left: 90%;
-  width: 160px;
-  height: 160px;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
-}
-
-@-webkit-keyframes square {
-  0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-  100% {
-    -webkit-transform: translateY(-1500px) rotate(600deg);
-            transform: translateY(-1500px) rotate(600deg);
-  }
-}
-
-@keyframes square {
-  0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-  100% {
-    -webkit-transform: translateY(-1500px) rotate(600deg);
-            transform: translateY(-1500px) rotate(600deg);
-  }
-}
-
-
-
-@-webkit-keyframes ripple {
-  0% {
-    opacity: 0;
-  }
-  30% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    padding-bottom: 200%;
-    width: 200%;
-  }
-}
-@-webkit-keyframes ripple {
-  0% {
-    opacity: 0;
-  }
-  30% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    padding-bottom: 200%;
-    width: 200%;
-  }
-}
+input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
