--- a/media/css/font-awesome.css
+++ b/media/css/font-awesome.css
@@ -26,7 +26,7 @@
   vertical-align: -15%;
 }
 .fa-me {
-  font-size: 1.5em;
+  font-size: 1.7em !important;
   line-height: 0.78em;
   vertical-align: -15%;
 }
