--- a/media/css/registro.css
+++ b/media/css/registro.css
@@ -1,9 +1,4 @@
 
-.text-area-direccion {
-  
-  min-width: 200px
-  max-width: 400px;
-  min-height: 50px;
-  max-height : 50px;
-  
+section.container {
+    width: 75%;
 }
